objects/BMCServiceDesk__Problem_Manifest__c.object
<CustomObject>
    <description>Stores data that is used to track progress of a problem for various status values.</description>
    <fields>
        <fullName>BMCServiceDesk__FKProblem__c</fullName>
        <label>Problem</label>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>Problem Manifests</relationshipLabel>
        <relationshipName>Problem_Manifests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>BMCServiceDesk__Status__c</referenceTo>
        <relationshipLabel>Problem Manifests</relationshipLabel>
        <relationshipName>Problem_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Problem Manifests</relationshipLabel>
        <relationshipName>Problem_Manifests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Problem Manifest</label>
    <nameField>
        <displayFormat>MAN-{0}</displayFormat>
        <label>Problem Manifest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Problem Manifests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>